# SATQuest

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  eval_model.py  gen_cnf_dataset.py  gen_cnf_rft_dataset.py  llm_inference.py  mkdocs.yml  pyproject.toml  quickstart.py  rft.py  setup.py
.github/workflows/: pre-commit.yml  publish-testpypi.yml  publish.yml  pytest.yml
docs/: datasets.md  evaluate.md  examples.md  finetuning.md  index.md  leaderboard.md
docs/overrides/partials/integrations/analytics/: vercel.html
satquest/: __init__.py  cnf.py  constants.py  problem.py  question.py  satquest_utils.py
tests/: test_cnf.py  test_problem.py  test_question.py
